[gd_scene load_steps=8 format=2]

[ext_resource path="res://ammo_and_reloading_demo/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/theme.tres" type="Theme" id=3]
[ext_resource path="res://space_background.png" type="Texture" id=4]
[ext_resource path="res://interface/fonts/font_text.tres" type="DynamicFont" id=5]
[ext_resource path="res://ammo_and_reloading_demo/AmmoReloadingDemo.gd" type="Script" id=6]
[ext_resource path="res://interface/fonts/font_title.tres" type="DynamicFont" id=7]

[node name="AmmoReloadingDemo" type="Node2D"]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 716, 539 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 959, 546 )
current = true
zoom = Vector2( 0.7, 0.7 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 1432, 840 )

[node name="Enemy4" parent="." instance=ExtResource( 2 )]
position = Vector2( 1484, 692 )

[node name="Enemy5" parent="." instance=ExtResource( 2 )]
position = Vector2( 1482, 399 )

[node name="Enemy3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1432, 259 )

[node name="Enemy2" parent="." instance=ExtResource( 2 )]
position = Vector2( 1502, 542 )

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="Panel" type="PanelContainer" parent="UserInterface"]
margin_left = 43.0
margin_top = 41.0
margin_right = 427.0
margin_bottom = 215.0
theme = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/Panel"]
margin_right = 384.0
margin_bottom = 498.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/Panel/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 368.0
margin_bottom = 482.0
custom_constants/separation = 10

[node name="ControlsTitle" type="Label" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_right = 352.0
margin_bottom = 36.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 7 )
text = "Ammo/Reloading Demo"

[node name="HSeparator" type="HSeparator" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 352.0
margin_bottom = 50.0

[node name="Controls1" type="Label" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 352.0
margin_bottom = 96.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "• Left-click: Shoot"

[node name="Controls2" type="Label" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 352.0
margin_bottom = 142.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "• Right-Click: Reload"

[node name="Control" type="Control" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 352.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 20 )

[node name="ControlsTitle2" type="Label" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 352.0
margin_bottom = 218.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 7 )
text = "Options"

[node name="HSeparator2" type="HSeparator" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 352.0
margin_bottom = 232.0

[node name="ReserveAmmo" type="HBoxContainer" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_top = 242.0
margin_right = 352.0
margin_bottom = 280.0
custom_constants/separation = 15

[node name="ReserveAmmoSpinBox" type="SpinBox" parent="UserInterface/Panel/MarginContainer/VBoxContainer/ReserveAmmo"]
unique_name_in_owner = true
margin_right = 112.0
margin_bottom = 38.0
max_value = 9999.0
value = 30.0

[node name="Label" type="Label" parent="UserInterface/Panel/MarginContainer/VBoxContainer/ReserveAmmo"]
margin_left = 127.0
margin_top = 1.0
margin_right = 311.0
margin_bottom = 37.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "Reserve Ammo"
align = 1

[node name="MaxAmmo" type="HBoxContainer" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_top = 290.0
margin_right = 352.0
margin_bottom = 328.0
custom_constants/separation = 15

[node name="MaxAmmoSpinBox" type="SpinBox" parent="UserInterface/Panel/MarginContainer/VBoxContainer/MaxAmmo"]
unique_name_in_owner = true
margin_right = 112.0
margin_bottom = 38.0
min_value = 1.0
max_value = 50.0
value = 10.0

[node name="Label" type="Label" parent="UserInterface/Panel/MarginContainer/VBoxContainer/MaxAmmo"]
margin_left = 127.0
margin_top = 1.0
margin_right = 265.0
margin_bottom = 37.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "Max Ammo"
align = 1

[node name="ReloadTime" type="HBoxContainer" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 352.0
margin_bottom = 376.0
custom_constants/separation = 15

[node name="ReloadTimeSpinBox" type="SpinBox" parent="UserInterface/Panel/MarginContainer/VBoxContainer/ReloadTime"]
unique_name_in_owner = true
margin_right = 112.0
margin_bottom = 38.0
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="Label" type="Label" parent="UserInterface/Panel/MarginContainer/VBoxContainer/ReloadTime"]
margin_left = 127.0
margin_top = 1.0
margin_right = 278.0
margin_bottom = 37.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "Reload Time"
align = 1

[node name="FireRate" type="HBoxContainer" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_top = 386.0
margin_right = 352.0
margin_bottom = 422.0
custom_constants/separation = 11

[node name="FireRateSlider" type="HSlider" parent="UserInterface/Panel/MarginContainer/VBoxContainer/FireRate"]
unique_name_in_owner = true
margin_right = 181.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 0.25
step = 0.01
value = 0.13

[node name="Label" type="Label" parent="UserInterface/Panel/MarginContainer/VBoxContainer/FireRate"]
margin_left = 192.0
margin_right = 352.0
margin_bottom = 36.0
rect_min_size = Vector2( 160, 0 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "Fire Rate"

[node name="RefillReservesButton" type="Button" parent="UserInterface/Panel/MarginContainer/VBoxContainer"]
margin_top = 432.0
margin_right = 352.0
margin_bottom = 466.0
grow_horizontal = 2
rect_min_size = Vector2( 225, 0 )
text = "Refill Reserves"

[connection signal="pressed" from="UserInterface/Panel/MarginContainer/VBoxContainer/RefillReservesButton" to="." method="_on_RefillReservesButton_pressed"]
